@@ -16,6 +16,7 @@ setup(name='collective.rtvideo.youtube',
         "Framework :: Plone :: 4.0",
         "Framework :: Plone :: 4.1",
         "Framework :: Plone :: 4.2",
+        "Framework :: Plone :: 4.3",
         "Programming Language :: Python",
         "Topic :: Multimedia :: Video",
         "License :: OSI Approved :: GNU General Public License (GPL)",
