@@ -10,12 +10,16 @@ Changelog
   or if the RedTurtle video contents is called with the same
   param, autoplay on video will be enabled
   [keul]
-* in the request url use autoplay, some accessibility/usability
+* if the request url use autoplay, some accessibility/usability
   improvements are added to the page, for simply keyboard controls
   [keul]
 * removed the secondary template, just use one template for standard
   and shortened embedding
   [keul]
+* Fixed Python import for Plone 4.3 (same problem of ticket `#14`__)
+  [bhenker, keul]
+
+__ https://github.com/RedTurtle/redturtle.video/pull/14
 
 0.2.0 (2012-09-04)
 ------------------
